6354122/antlr-generated/com/arievanderveek/soo/parser/antlrimpl/generated/Oberon0Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g 2011-01-29 00:13:51

  package com.arievanderveek.soo.parser.antlrimpl.generated;
  import com.arievanderveek.soo.ast.*;
  import com.arievanderveek.soo.ast.statements.*;
  import com.arievanderveek.soo.ast.variables.*;
  import com.arievanderveek.soo.ast.unaryoperators.*;
  import com.arievanderveek.soo.ast.binaryoperators.*;
  import com.arievanderveek.soo.ast.codeblocks.*;
  import java.util.Map;
  import java.util.Queue;
  import java.util.Hashtable;
  import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Oberon0Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "IDENT", "INTEGER", "DIGIT", "LETTER", "WS", "'.'", "'['", "']'", "'('", "')'", "'~'", "'*'", "'DIV'", "'MOD'", "'&'", "'+'", "'-'", "'OR'", "'='", "'#'", "'<'", "'<='", "'>'", "'>='", "':='", "','", "'ELSIF'", "'THEN'", "'ELSE'", "'IF'", "'END'", "'WHILE'", "'DO'", "';'", "'ARRAY'", "'OF'", "':'", "'RECORD'", "'VAR'", "'BEGIN'", "'PROCEDURE'", "'CONST'", "'TYPE'", "'MODULE'"
    };
    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int NEGATION=4;
    public static final int IDENT=5;
    public static final int INTEGER=6;
    public static final int DIGIT=7;
    public static final int LETTER=8;
    public static final int WS=9;

    // delegates
    // delegators


        public Oberon0Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Oberon0Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Oberon0Parser.tokenNames; }
    public String getGrammarFileName() { return "/school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g"; }


    public static class selectorPart_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selectorPart"
    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:32:1: selectorPart : ( '.' IDENT | '[' e= expression ']' );
    public final Oberon0Parser.selectorPart_return selectorPart() throws RecognitionException {
        Oberon0Parser.selectorPart_return retval = new Oberon0Parser.selectorPart_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal1=null;
        Token IDENT2=null;
        Token char_literal3=null;
        Token char_literal4=null;
        Oberon0Parser.expression_return e = null;


        CommonTree char_literal1_tree=null;
        CommonTree IDENT2_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree char_literal4_tree=null;

        try {
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:33:2: ( '.' IDENT | '[' e= expression ']' )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==10) ) {
                alt1=1;
            }
            else if ( (LA1_0==11) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:33:4: '.' IDENT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal1=(Token)match(input,10,FOLLOW_10_in_selectorPart64); 
                    char_literal1_tree = (CommonTree)adaptor.create(char_literal1);
                    adaptor.addChild(root_0, char_literal1_tree);

                    IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_selectorPart66); 
                    IDENT2_tree = (CommonTree)adaptor.create(IDENT2);
                    adaptor.addChild(root_0, IDENT2_tree);

                     ((selector_scope)selector_stack.peek()).selectors.add(new IdentifierNode((IDENT2!=null?IDENT2.getText():null))); 

                    }
                    break;
                case 2 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:34:4: '[' e= expression ']'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal3=(Token)match(input,11,FOLLOW_11_in_selectorPart73); 
                    char_literal3_tree = (CommonTree)adaptor.create(char_literal3);
                    adaptor.addChild(root_0, char_literal3_tree);

                    pushFollow(FOLLOW_expression_in_selectorPart77);
                    e=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, e.getTree());
                    char_literal4=(Token)match(input,12,FOLLOW_12_in_selectorPart79); 
                    char_literal4_tree = (CommonTree)adaptor.create(char_literal4);
                    adaptor.addChild(root_0, char_literal4_tree);

                     ((selector_scope)selector_stack.peek()).selectors.add((e!=null?e.node:null)); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selectorPart"

    protected static class selector_scope {
        Queue<ASTNode> selectors;
    }
    protected Stack selector_stack = new Stack();

    public static class selector_return extends ParserRuleReturnScope {
        public SelectorNode return_selectors;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:37:1: selector returns [SelectorNode return_selectors] : ( selectorPart )* ;
    public final Oberon0Parser.selector_return selector() throws RecognitionException {
        selector_stack.push(new selector_scope());
        Oberon0Parser.selector_return retval = new Oberon0Parser.selector_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Oberon0Parser.selectorPart_return selectorPart5 = null;




        	((selector_scope)selector_stack.peek()).selectors = new LinkedList();

        try {
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:44:2: ( ( selectorPart )* )
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:44:4: ( selectorPart )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:44:4: ( selectorPart )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=10 && LA2_0<=11)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:44:4: selectorPart
            	    {
            	    pushFollow(FOLLOW_selectorPart_in_selector103);
            	    selectorPart5=selectorPart();

            	    state._fsp--;

            	    adaptor.addChild(root_0, selectorPart5.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

             retval.return_selectors = new SelectorNode(((selector_scope)selector_stack.peek()).selectors); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            selector_stack.pop();
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class identSelector_return extends ParserRuleReturnScope {
        public ASTNode node;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "identSelector"
    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:48:1: identSelector returns [ASTNode node] : IDENT selector ;
    public final Oberon0Parser.identSelector_return identSelector() throws RecognitionException {
        Oberon0Parser.identSelector_return retval = new Oberon0Parser.identSelector_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT6=null;
        Oberon0Parser.selector_return selector7 = null;


        CommonTree IDENT6_tree=null;

        try {
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:49:2: ( IDENT selector )
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:49:4: IDENT selector
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENT6=(Token)match(input,IDENT,FOLLOW_IDENT_in_identSelector122); 
            IDENT6_tree = (CommonTree)adaptor.create(IDENT6);
            adaptor.addChild(root_0, IDENT6_tree);

            pushFollow(FOLLOW_selector_in_identSelector124);
            selector7=selector();

            state._fsp--;

            adaptor.addChild(root_0, selector7.getTree());
            retval.node = new IdentifierNode((IDENT6!=null?IDENT6.getText():null) , (selector7!=null?selector7.return_selectors:null) );

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "identSelector"

    public static class factor_return extends ParserRuleReturnScope {
        public ASTNode node;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "factor"
    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:52:1: factor returns [ASTNode node] : ( identSelector | INTEGER | '(' expression ')' | '~' f= factor );
    public final Oberon0Parser.factor_return factor() throws RecognitionException {
        Oberon0Parser.factor_return retval = new Oberon0Parser.factor_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INTEGER9=null;
        Token char_literal10=null;
        Token char_literal12=null;
        Token char_literal13=null;
        Oberon0Parser.factor_return f = null;

        Oberon0Parser.identSelector_return identSelector8 = null;

        Oberon0Parser.expression_return expression11 = null;


        CommonTree INTEGER9_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal13_tree=null;

        try {
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:53:2: ( identSelector | INTEGER | '(' expression ')' | '~' f= factor )
            int alt3=4;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt3=1;
                }
                break;
            case INTEGER:
                {
                alt3=2;
                }
                break;
            case 13:
                {
                alt3=3;
                }
                break;
            case 15:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:53:4: identSelector
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_identSelector_in_factor141);
                    identSelector8=identSelector();

                    state._fsp--;

                    adaptor.addChild(root_0, identSelector8.getTree());
                     retval.node = (identSelector8!=null?identSelector8.node:null);

                    }
                    break;
                case 2 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:54:4: INTEGER
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    INTEGER9=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_factor148); 
                    INTEGER9_tree = (CommonTree)adaptor.create(INTEGER9);
                    adaptor.addChild(root_0, INTEGER9_tree);

                    retval.node = new IntegerNode(new Integer((INTEGER9!=null?INTEGER9.getText():null))) ;

                    }
                    break;
                case 3 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:55:4: '(' expression ')'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal10=(Token)match(input,13,FOLLOW_13_in_factor155); 
                    char_literal10_tree = (CommonTree)adaptor.create(char_literal10);
                    adaptor.addChild(root_0, char_literal10_tree);

                    pushFollow(FOLLOW_expression_in_factor157);
                    expression11=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression11.getTree());
                    char_literal12=(Token)match(input,14,FOLLOW_14_in_factor159); 
                    char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
                    adaptor.addChild(root_0, char_literal12_tree);

                    retval.node = (expression11!=null?expression11.node:null); 

                    }
                    break;
                case 4 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:56:4: '~' f= factor
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal13=(Token)match(input,15,FOLLOW_15_in_factor166); 
                    char_literal13_tree = (CommonTree)adaptor.create(char_literal13);
                    root_0 = (CommonTree)adaptor.becomeRoot(char_literal13_tree, root_0);

                    pushFollow(FOLLOW_factor_in_factor171);
                    f=factor();

                    state._fsp--;

                    adaptor.addChild(root_0, f.getTree());
                    retval.node = new NotOperatorNode((f!=null?f.node:null)); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "factor"

    public static class term_return extends ParserRuleReturnScope {
        public ASTNode node;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:59:1: term returns [ASTNode node] : lhs= factor ( (times= '*' | div= 'DIV' | mod= 'MOD' | and= '&' ) rhs= factor )? ;
    public final Oberon0Parser.term_return term() throws RecognitionException {
        Oberon0Parser.term_return retval = new Oberon0Parser.term_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token times=null;
        Token div=null;
        Token mod=null;
        Token and=null;
        Oberon0Parser.factor_return lhs = null;

        Oberon0Parser.factor_return rhs = null;


        CommonTree times_tree=null;
        CommonTree div_tree=null;
        CommonTree mod_tree=null;
        CommonTree and_tree=null;

        try {
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:60:2: (lhs= factor ( (times= '*' | div= 'DIV' | mod= 'MOD' | and= '&' ) rhs= factor )? )
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:60:4: lhs= factor ( (times= '*' | div= 'DIV' | mod= 'MOD' | and= '&' ) rhs= factor )?
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_factor_in_term191);
            lhs=factor();

            state._fsp--;

            adaptor.addChild(root_0, lhs.getTree());
            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:61:2: ( (times= '*' | div= 'DIV' | mod= 'MOD' | and= '&' ) rhs= factor )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=16 && LA5_0<=19)) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:61:3: (times= '*' | div= 'DIV' | mod= 'MOD' | and= '&' ) rhs= factor
                    {
                    // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:61:3: (times= '*' | div= 'DIV' | mod= 'MOD' | and= '&' )
                    int alt4=4;
                    switch ( input.LA(1) ) {
                    case 16:
                        {
                        alt4=1;
                        }
                        break;
                    case 17:
                        {
                        alt4=2;
                        }
                        break;
                    case 18:
                        {
                        alt4=3;
                        }
                        break;
                    case 19:
                        {
                        alt4=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;
                    }

                    switch (alt4) {
                        case 1 :
                            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:61:4: times= '*'
                            {
                            times=(Token)match(input,16,FOLLOW_16_in_term199); 
                            times_tree = (CommonTree)adaptor.create(times);
                            adaptor.addChild(root_0, times_tree);


                            }
                            break;
                        case 2 :
                            // /school/construction/labassignment1/6354122/src/com/arievanderveek/soo/parser/antlrimpl/Oberon0.g:62:4: div= 'DIV'
                            {
                            div=(Token)match(input,17,FOLLOW_17_in_term206); 
                            div_tree = (CommonTree)adaptor.create(div);
                            adaptor.addChild(root_0, div_tree);

